trying to fix paycrave persona visibility at mobile width

--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -755,6 +755,7 @@ a:hover {color: #444b5d;}
   transform: translate(-10%, -80%);
   border-style: solid;
   border-color: #000;
+  z-index: 1000;
  } 
    @media (max-width: 550px) {
      .img-top {margin-bottom:0px; max-width:100%; bottom: 0; left: 0; transform: none;}
